[saitrinath] css to scrollbar, updated readme, fixed errors

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,10 +3,46 @@
 
 body {
 	height: 100%;
-  font-family: 'Varela', sans-serif !important;
+ 	font-family: 'Varela', sans-serif !important;
 }
 
 #container {
 	// background-color: hsl(250, 40%, 80%);
 	background-image: linear-gradient($blue-light, $blue-medium, $blue-dark);
 }
+
+/* width */
+::-webkit-scrollbar {
+ 	width: 14px;
+}
+
+/* Track */
+// ::-webkit-scrollbar-track {
+//   // box-shadow: inset 0 0 5px grey; 
+//   border-radius: 2px;
+// }
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+	height: 6px;
+	border: 3px solid rgba(0, 0, 0, 0);
+	background-clip: padding-box; 
+  	-webkit-border-radius: 7px;
+  	background-color: $blue-thick;
+  	border-radius: 10px;
+}
+
+::-webkit-scrollbar-button {
+    width: 0;
+    height: 0;
+    display: none;
+}
+
+::-webkit-scrollbar-corner {
+    background-color: transparent;
+}
+
+/* Handle on hover */
+// ::-webkit-scrollbar-thumb:hover {
+//   background: $blue-dark; 
+// }
