--- a/src/components/Section/index.module.scss
+++ b/src/components/Section/index.module.scss
@@ -6,5 +6,5 @@
 	box-shadow: 0 4px 8px 0 $blue-light, 0 6px 20px 0 $blue-light;
 	margin-top: 10%;
 	max-height: 480px;
-	overflow-y: scroll;
+	overflow-y: auto;
 } 
