--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,5 @@
 $blue: #007bff;
-$blue-dark: rgba($blue, 0.88);
 $blue-light: rgba($blue, 0.19);
 $blue-medium: rgba($blue, 0.33);
+$blue-thick: rgba($blue, 0.68);
+$blue-dark: rgba($blue, 0.88);
